[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "diffusion"
version = "0.0.1"
description = ""
authors = ["Saif Daknou", "Patrick Lindemann", "Nguyen Pham"]

[tool.poetry.dependencies]
ipython = "^8.17.2"
lightning = "^2.1.1"
matplotlib = "^3.7.1"
numpy = "^1.26.2"
pandas = "^2.1.3"
python = "^3.10"
scikit_learn = "^1.3.2"
torch = "^2.1.0"
torchvision = "^0.16.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"
pytest = "^7.3.1"
